--- a/ftplugin/filetype.vim.template
+++ b/ftplugin/filetype.vim.template
@@ -37,7 +37,16 @@ let b:anyfold_docubox_start = ''                 " <-- String that starts first 
 let b:anyfold_docubox_end = ''                   " <-- String that starts last line of a
                                                  "     docu box (experimental)
 
-call anyfold#init(s:indent, s:comment_char)
+let s:equalprg = ''                              " <-- external tool (executable)
+                                                 "     to be used for auto indents
+let s:equalprg_args = ''                         " <-- arguments passed to external equalprg
+                                                 "     Hints for setting up equalprg:
+                                                 "     equalprg must accept its input through
+                                                 "     stdin and return the result to stdout.
+                                                 "     It should not print errors or warnings
+                                                 "     (unless it fails).
+
+call anyfold#init(s:indent, s:comment_char, s:equalprg, s:equalprg_args)
 
 if exists('g:anyfold_lang_settings')
     if g:anyfold_lang_settings
