--- a/ftplugin/filetype.vim.template
+++ b/ftplugin/filetype.vim.template
@@ -6,7 +6,7 @@ if exists("b:loaded_anyfold")
 endif
 let b:loaded_anyfold = 1
 
-setlocal filetype=<filetype>                     " <-- type of file (e.g. python)
+setlocal filetype=<filetype>                     " <-- filetype (e.g. python)
 
 if !exists("g:anyfold_activate")
     finish
@@ -17,7 +17,7 @@ endif
 "----------------------------------------------------------------------------/
 " Mandatory options
 "----------------------------------------------------------------------------/
-let s:indent = <indent>                          " <-- Default indent width (e.g. 4)
+let s:nindent = <nindent>                        " <-- Default indent width (e.g. 4)
 let s:comment_char = '<comment>'                 " <-- Character or string used for comments (e.g. #)
                                                  " Now you are already done. Below are
                                                  " some voluntary options. Before you edit
@@ -45,8 +45,12 @@ let s:equalprg_args = ''                         " <-- arguments passed to exter
                                                  "     stdin and return the result to stdout.
                                                  "     It should not print errors or warnings
                                                  "     (unless it fails).
+                                                 "     To pass anyfold's default indent
+                                                 "     (anyfold_nindent variable), use expression
+                                                 "     <nindent>. For example:
+                                                 "     let s:equalprg_args = '--indent=<nindent>'
 
-call anyfold#init(s:indent, s:comment_char, s:equalprg, s:equalprg_args)
+call anyfold#init(s:nindent, s:comment_char, s:equalprg, s:equalprg_args)
 
 if exists('g:anyfold_lang_settings')
     if g:anyfold_lang_settings
